# taskik

./: .dockerignore  .env-example  .env-exapmle  .gitignore  Dockerfile  README.md  TODO  alembic.ini  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024_04_25_1609-3ff8458af0b5_initial_revision.py  2024_05_06_2016-7a30cfd22931_init.py  2024_05_06_2017-744f6a54417f_add_subtasks.py  2024_06_07_1641-694f4f347484_init.py  2024_06_07_1642-9e8cc83eb887_add_tasks.py  2024_06_07_1643-c2dce11815bd_add_subtasks.py  2024_06_07_1645-dc3a9388bfb4_add_users.py  2024_06_07_1746-a83fb4642aa4_add_active_field_to_users.py  2024_06_07_1950-6a9f775bd8a3_add_email_uq_constraint.py  2024_06_10_1949-7d910055c1ce_add_users_realationships.py  2024_07_11_1723-4441f40e4a4e_remove_subtask_as_entity.py
app/api/: __init__.py
app/api/auth/: dependencies.py  router.py  utils.py
app/api/subtasks/: crud.py  dependencies.py  models.py  router.py  schemas.py
app/api/task/: crud.py  dependencies.py  models.py  router.py  schemas.py
app/api/tasks/: crud.py  dependencies.py  models.py  router.py  schemas.py
app/api/users/: crud.py  router.py  schemas.py
app/core/: config.py  database.py  security.py
app/core/models/: __init__.py  base.py  subtask.py  task.py  user.py
